[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/paragraph_bold.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/paragraph.tres" type="DynamicFont" id=2]
[ext_resource path="res://sprites/ui/icons.png" type="Texture" id=3]
[ext_resource path="res://objects/Menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/YouWin.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="Animation" id=2]
resource_name = "appear"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Background_Outline:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.196146, 1 ),
"update": 0,
"values": [ Vector2( 0, 180 ), Vector2( 0, 140 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background_Outline:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.203063, 1 ),
"update": 0,
"values": [ Vector2( 640, 0 ), Vector2( 640, 82 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label_LevelClear:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.01, 0.01, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Label_Quip:percent_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.01, 0.01, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Grid:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Menu:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 0.203063, 1 ),
"update": 0,
"values": [ Vector2( 276, 380 ), Vector2( 276, 380 ), Vector2( 276, 260 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Darken:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="YouWin" type="CanvasLayer"]
pause_mode = 2
layer = 100
script = ExtResource( 5 )

[node name="Darken" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background_Outline" type="ColorRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
color = Color( 0.34902, 0.337255, 0.321569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background_Fill" type="ColorRect" parent="Background_Outline"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = -1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_LevelClear" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -28.0
margin_bottom = -13.0
rect_min_size = Vector2( 0, 15 )
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 8 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.12549, 0.203922, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Level Clear!"
align = 1
valign = 1
percent_visible = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Quip" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -14.0
margin_right = 320.0
margin_bottom = 1.00002
rect_min_size = Vector2( 0, 15 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.517647, 0.494118, 0.529412, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.12549, 0.203922, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Romance achieved."
align = 1
valign = 1
percent_visible = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 268.0
margin_top = 184.0
margin_right = -276.0
margin_bottom = -144.0
rect_min_size = Vector2( 96, 0 )
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Steps_Label" type="Label" parent="Grid"]
margin_right = 60.0
margin_bottom = 15.0
rect_min_size = Vector2( 60, 15 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.517647, 0.494118, 0.529412, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.12549, 0.203922, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Steps/par:"
valign = 1

[node name="Label_Steps_Value" type="Label" parent="Grid"]
margin_left = 60.0
margin_right = 108.0
margin_bottom = 15.0
rect_min_size = Vector2( 48, 15 )
custom_fonts/font = ExtResource( 1 )
text = "3/5"
align = 2
valign = 1

[node name="Label_Flowers_Label" type="Label" parent="Grid"]
margin_top = 15.0
margin_right = 60.0
margin_bottom = 31.0
rect_min_size = Vector2( 60, 16 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.517647, 0.494118, 0.529412, 1 )
custom_colors/font_color_shadow = Color( 0.133333, 0.12549, 0.203922, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Flowers:"

[node name="Control" type="Control" parent="Grid"]
margin_left = 60.0
margin_top = 15.0
margin_right = 108.0
margin_bottom = 31.0

[node name="TextureRect_Flowers_Value" type="TextureRect" parent="Grid/Control"]
margin_left = 40.0
margin_top = 4.0
margin_right = 48.0
margin_bottom = 12.0
texture = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.0
margin_top = 200.0
margin_right = 44.0
margin_bottom = 252.0
rect_min_size = Vector2( 88, 52 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/appear = SubResource( 2 )
[connection signal="button_pressed" from="Menu" to="." method="_on_Menu_button_pressed"]
